# ls-pretty

./: Cargo.toml  LICENSE  README.md
src/: args.rs  dir_entry_kept_state.rs  main.rs  palette.rs  print.rs  utils.rs
