[package]
name = "ls-pretty"
version = "0.1.0"
publish = false
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]

[dependencies]
structopt = "0.1.0"
structopt-derive = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

