[package]
name = "ls-pretty"
version = "0.1.0"
publish = false
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
edition = "2021"

[dependencies]
structopt = "0.3.26"
structopt-derive = "0.4.18"
itertools = "0.10.3"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false
