[package]
name = "ls-pretty"
version = "0.1.0"
publish = false
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.12.1"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false
